--- a/src/css/base/_fonts.scss
+++ b/src/css/base/_fonts.scss
@@ -40,3 +40,10 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: 'Raleway';
+    src: url("../fonts/subset-Raleway-SemiBold.woff2") format('woff2'), url("../fonts/subset-Raleway-SemiBold.woff") format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
