--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -9,6 +9,7 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
+    scrollbar-width: thin;
 }
 
 html {
@@ -22,7 +23,7 @@ html {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    font-family: 'Montserrat', Arial, sans-serif;
+    font-family: var(--primary_font);
     font-weight: 400;
     line-height: 1.5;
     overflow-x: hidden;
@@ -31,6 +32,18 @@ html {
     @media(min-width: $fhd) {
         font-size: 20px;
         line-height: 1.6;
+    }
+
+    &--inner {
+        .page__content {
+            padding-top: 116px;
+            @media(min-width: $md) {
+                padding-top: 205px;
+            }
+            @media(min-width: $fhd) {
+                padding-top: 245px;
+            }
+        }
     }
 
     &.is-overflow {
@@ -117,10 +130,6 @@ a {
         @include active {
             color: var(--primary_pressed);
         }
-        /*&:visited {
-            color: var(--link_visited);
-            transition: color 0.3s;
-        }*/
     }
 }
 
