--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -18,6 +18,11 @@ $fhd: 1900px;
     --grey_dark: #999EAB;
     --header_min_heigt: 60px;
     --container_padding: 16px;
+    --primary_font: 'Raleway', Arial, sans-serif;
+    --secondary_font: 'Montserrat', Arial, sans-serif;
+    @media(min-width: $md) {
+        --header_min_heigt: 120px;
+    }
     @media(min-width: $fhd) {
         --header_min_heigt: 125px;
     }
