--- a/src/template/common/fonts_preload.html
+++ b/src/template/common/fonts_preload.html
@@ -4,3 +4,4 @@
 <link rel="preload" href="fonts/subset-Raleway-LightItalic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="fonts/subset-Raleway-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" href="fonts/subset-Raleway-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="fonts/subset-Raleway-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
